--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.5.1",
+    "date-fns": "^2.15.0",
+    "firebase": "^7.17.1",
+    "firebase-tools": "^8.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
